Fix: Visual overflow of buttons in a dropdown in IE11
- https://datatables.net/forums/discussion/comment/143182#Comment_143182

--- a/css/buttons.jqueryui.scss
+++ b/css/buttons.jqueryui.scss
@@ -49,6 +49,7 @@ div.dt-button-collection {
 		left: 0;
 		right: 0;
 		width: 100%;
+		box-sizing: border-box;
 
 		display: block;
 		float: none;
